# kjournald

./: .flatpak-manifest.json  .flatpak-manifest.json.license  .flatpak-manifest.yaml  .flatpak-manifest.yaml.license  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KJournaldConfig.cmake.in  LogLine.qml  Messages.sh  README.md  REUSE.toml  bootmodel.cpp  bootmodel.h  bootmodel_p.h  clipboardproxy.cpp  fieldfilterproxymodel.cpp  fieldfilterproxymodel.h  journal.cpp  journal.h  journal_p.h  journaldhelper.cpp  journaldhelper.h  journalduniquequerymodel.cpp  journalduniquequerymodel.h  journalduniquequerymodel_p.h  journaldviewmodel.cpp  journaldviewmodel.h  journaldviewmodel_p.h  loggingcategories.cpp  loggingcategories.h  main.cpp  main.qml  qml.qrc  screenshot.png.license  snapcraft.yaml
autotests/: CMakeLists.txt  containertesthelper.h  journalexportformat_binary_example.export  journalexportformat_binary_example.txt  journalexportformat_example.txt  testdatalocation.h.inc
autotests/containertesthelper/: CMakeLists.txt  containertesthelpertest.cpp  containertesthelpertest.h
autotests/filtercriteriamodel/: CMakeLists.txt  test_filtercriteriamodel.cpp  test_filtercriteriamodel.h
autotests/journaldhelper/: CMakeLists.txt  cleanup_string_rawinput.txt  cleanup_string_result.txt  cleanup_string_result.txt.license  test_journaldhelper.cpp  test_journaldhelper.h
autotests/localjournal/: CMakeLists.txt  test_localjournal.cpp  test_localjournal.h
autotests/remotejournal/: CMakeLists.txt  test_remotejournal.cpp  test_remotejournal.h
autotests/uniquequery/: CMakeLists.txt  test_uniquequery.cpp  test_uniquequery.h
autotests/viewmodel/: CMakeLists.txt  test_viewmodel.cpp  test_viewmodel.h
browser/: CMakeLists.txt  ColoredCheckbox.qml  FilterCriteriaView.qml  GlobalMenu.qml  LogLine.qml  LogView.qml  Main.qml  RemoteJournalConfigDialog.qml  TopMenuBar.qml  aboutproxy.cpp  aboutproxy.h  clipboardproxy.cpp  clipboardproxy.h  flattenedfiltercriteriaproxymodel.cpp  flattenedfiltercriteriaproxymodel.h  main.cpp  org.kde.journald-browser.appdata.xml  org.kde.journald-browser.desktop  org.kde.kjournaldbrowser.appdata.xml  org.kde.kjournaldbrowser.desktop  qml.qrc  sessionconfig.cpp  sessionconfig.h
browser/org/kde/kjournaldbrowser/: .qmlls.ini  CMakeLists.txt  ColoredCheckbox.qml  FilterCriteriaView.qml  GlobalMenu.qml  Main.qml  TopMenuBar.qml
lib/: CMakeLists.txt  bootmodel.cpp  bootmodel.h  bootmodel_p.h  colorizer.cpp  colorizer.h  fieldfilterproxymodel.cpp  fieldfilterproxymodel.h  filter.cpp  filter.h  filtercriteriamodel.cpp  filtercriteriamodel.h  filtercriteriamodel_p.h  ijournal.h  journal.cpp  journal.h  journaldexportreader.cpp  journaldexportreader.h  journaldhelper.cpp  journaldhelper.h  journalduniquequerymodel.cpp  journalduniquequerymodel.h  journaldviewmodel.cpp  journaldviewmodel.h  journaldviewmodel_p.h  localjournal.cpp  localjournal.h  localjournal_p.h  loggingcategories.cpp  memory.h  systemdjournalremote.cpp  systemdjournalremote.h  systemdjournalremote_p.h
org/kde/kjournald/: CMakeLists.txt  bootmodel.cpp  bootmodel.h  bootmodel_p.h  colorizer.cpp  fieldfilterproxymodel.cpp  fieldfilterproxymodel.h  filter.cpp  filter.h  filtercriteriamodel.cpp  filtercriteriamodel.h  filtercriteriamodel_p.h  flattenedfiltercriteriaproxymodel.cpp  flattenedfiltercriteriaproxymodel.h  ijournal.h  ijournalprovider.h  journaldexportreader.cpp  journaldexportreader.h  journaldhelper.cpp  journaldhelper.h  journalduniquequerymodel.cpp  journalduniquequerymodel.h  journalduniquequerymodel_p.h  journaldviewmodel.cpp  journaldviewmodel.h  journaldviewmodel_p.h  journaldviewmodelslidingwindow_p.h  localjournal.cpp  localjournal.h  localjournal_p.h  logentry.cpp  logentry.h  memory.h  sdjournal.cpp  sdjournal.h  systemdjournalremote.cpp  systemdjournalremote.h  systemdjournalremote_p.h
org/kde/kjournaldbrowser/: CMakeLists.txt  ColoredCheckbox.qml  FilterCriteriaView.qml  GlobalMenu.qml  JournalFileSelectionDialog.qml  JournalFolderSelectionDialog.qml  LogLine.qml  LogView.qml  Main.qml  RemoteJournalConfigDialog.qml  TopMenuBar.qml  browserapplication.cpp  browserapplication.h  clipboardproxy.cpp  clipboardproxy.h  databaseprovider.cpp  databaseprovider.h  formatter.cpp  formatter.h  textsearch.cpp  textsearch.h
po/ar/: kjournald.po
po/ast/: kjournald.po
po/bg/: kjournald.po
po/ca/: kjournald.po
po/ca@valencia/: kjournald.po
po/cs/: kjournald.po
po/de/: kjournald.po
po/en_GB/: kjournald.po
po/eo/: kjournald.po
po/es/: kjournald.po
po/eu/: kjournald.po
po/fi/: kjournald.po
po/fr/: kjournald.po
po/ga/: kjournald.po
po/gl/: kjournald.po
po/he/: kjournald.po
po/hi/: kjournald.po
po/ia/: kjournald.po
po/ie/: kjournald.po
po/is/: kjournald.po
po/it/: kjournald.po
po/ja/: kjournald.po
po/ka/: kjournald.po
po/ko/: kjournald.po
po/lt/: kjournald.po
po/lv/: kjournald.po
po/nl/: kjournald.po
po/pl/: kjournald.po
po/pt/: kjournald.po
po/pt_BR/: kjournald.po
po/ru/: kjournald.po
po/sa/: kjournald.po
po/sk/: kjournald.po
po/sl/: kjournald.po
po/sv/: kjournald.po
po/tr/: kjournald.po
po/ug/: kjournald.po
po/uk/: kjournald.po
po/zh_CN/: kjournald.po
po/zh_TW/: kjournald.po
